--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,6 @@
 
 [functions]
   node_bundler = "esbuild"
+
+[functions."send_weekly_summary"]
+  schedule = "1 2 * * 0"  # Every Sunday at 12 PM UTC
